--- a/frontend/assets/css/styles.scss
+++ b/frontend/assets/css/styles.scss
@@ -1049,3 +1049,9 @@ $img-content-position : absolute !default;
 $img-content-padding : 16px !default;
 $img-content-color : #fff !default;
 $img-content-background : rgba(0, 0, 0, .47) !default;
+
+
+
+a{
+    color: $primary;
+}
