--- a/frontend/assets/css/styles.scss
+++ b/frontend/assets/css/styles.scss
@@ -11,16 +11,6 @@
 // It's highly recommended to change the default colors
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
-
-.ck-editor__editable {
-    min-height: 500px;
-    min-width: 100%;
-}
-
-.ck .ck-toolbar {
-    flex-wrap: wrap;
-}
-
 // src/css/quasar.variables.sass
 
 $primary : #3a887c;
@@ -1056,9 +1046,9 @@ $img-content-color : #fff !default;
 $img-content-background : rgba(0, 0, 0, .47) !default;
 
 
-
+// global css
 a {
-    color: $secondary;
+    color: $primary;
     text-decoration: none;
 }
 
@@ -1066,8 +1056,84 @@ a {
     color: $grey-7;
 }
 
+.body--dark{
+    .text-muted {
+        color: $grey-5;
+    }
+     
+}
+
 p {
     margin: 0;
+    padding: 0;
+}
+
+h1, h2, h3, h4, h5, h6  {
+    margin: 0;
+}
+
+// utility classes
+
+.bg-nutral{
+    background-color: white;
+}
+
+.body--dark{
+    .bg-nutral{
+        background-color: $dark-page;
+    } 
+}
+
+.text-nutral{
+    color: black;
+}
+
+.body--dark{
+    .text-nutral{
+        color: whitesmoke;
+    }
+}
+    
+.list-style-none{
+    list-style-type:none;
+    padding-left: 0px;
+}
+
+.input-shadow {
+    .q-field__inner {
+        box-shadow: $shadow-1;
+        border-radius: $generic-border-radius;
+    }
+}
+    
+.underline {
+    text-decoration: underline;
+}
+
+$gaps:25,50,75,100,125,150,175,200,225,250,275,300;
+
+@each $gap in $gaps {
+    .gap-#{$gap} {
+      gap:$gap/100 +rem;
+    }
+  }
+
+
+//componets modification
+
+.ck-editor__editable {
+    min-height: 500px;
+    min-width: 100%;
+}
+
+.ck .ck-toolbar {
+    flex-wrap: wrap;
+}
+
+
+.q-tab-panel{
+    padding: 0;
+    padding-top: 1rem;
 }
 
 .q-carousel__navigation {
@@ -1082,13 +1148,38 @@ p {
 }
 
 
-.input-shadow {
-    .q-field__inner {
-        box-shadow: $shadow-1;
-        border-radius: $generic-border-radius;
-    }
+.pswp--open {
+    z-index: 100000 !important;
 }
 
-.underline {
-    text-decoration: underline;
+.my-gallery{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    // @media screen and (max-width: $breakpoint-sm) {
+    //     grid-template-columns: repeat(4, 1fr);
+    //     grid-template-rows: repeat(2, 1fr);
+    // }
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    align-items: center;
+    object-fit: cover;
+    border-radius: 50px;
+    overflow: hidden;
+    figure{
+        grid-column: 1fr;
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+
+    figure:nth-child(1){
+        grid-area: 1 / 1 / 3 / 3;
+        @media screen and (max-width: $breakpoint-sm) {
+            grid-area: 1 / 1 / 5 / 5;
+        }
+    }
+    
 }
