--- a/frontend/assets/css/styles.scss
+++ b/frontend/assets/css/styles.scss
@@ -1056,11 +1056,11 @@ a {
     color: $grey-7;
 }
 
-.body--dark{
+.body--dark {
     .text-muted {
         color: $grey-5;
     }
-     
+
 }
 
 p {
@@ -1068,34 +1068,39 @@ p {
     padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6  {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
 // utility classes
 
-.bg-nutral{
+.bg-nutral {
     background-color: white;
 }
 
-.body--dark{
-    .bg-nutral{
+.body--dark {
+    .bg-nutral {
         background-color: $dark-page;
-    } 
+    }
 }
 
-.text-nutral{
+.text-nutral {
     color: black;
 }
 
-.body--dark{
-    .text-nutral{
+.body--dark {
+    .text-nutral {
         color: whitesmoke;
     }
 }
-    
-.list-style-none{
-    list-style-type:none;
+
+.list-style-none {
+    list-style-type: none;
     padding-left: 0px;
 }
 
@@ -1105,18 +1110,18 @@ h1, h2, h3, h4, h5, h6  {
         border-radius: $generic-border-radius;
     }
 }
-    
+
 .underline {
     text-decoration: underline;
 }
 
-$gaps:25,50,75,100,125,150,175,200,225,250,275,300;
+$gaps: 25, 50, 75, 100, 125, 150, 175, 200, 225, 250, 275, 300;
 
 @each $gap in $gaps {
     .gap-#{$gap} {
-      gap:$gap/100 +rem;
+        gap: $gap/100 + rem;
     }
-  }
+}
 
 
 //componets modification
@@ -1131,7 +1136,7 @@ $gaps:25,50,75,100,125,150,175,200,225,250,275,300;
 }
 
 
-.q-tab-panel{
+.q-tab-panel {
     padding: 0;
     padding-top: 1rem;
 }
@@ -1152,7 +1157,7 @@ $gaps:25,50,75,100,125,150,175,200,225,250,275,300;
     z-index: 100000 !important;
 }
 
-.my-gallery{
+.my-gallery {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -1166,20 +1171,23 @@ $gaps:25,50,75,100,125,150,175,200,225,250,275,300;
     object-fit: cover;
     border-radius: 50px;
     overflow: hidden;
-    figure{
+
+    figure {
         grid-column: 1fr;
-        img{
+
+        img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
 
-    figure:nth-child(1){
+    figure:nth-child(1) {
         grid-area: 1 / 1 / 3 / 3;
+
         @media screen and (max-width: $breakpoint-sm) {
             grid-area: 1 / 1 / 5 / 5;
         }
     }
-    
+
 }
