--- a/frontend/assets/css/styles.scss
+++ b/frontend/assets/css/styles.scss
@@ -1115,6 +1115,28 @@ h6 {
     text-decoration: underline;
 }
 
+.border {
+    border: 1px solid $grey-4;
+
+    &-primary {
+        @extend .border;
+        border-color: $primary;
+    }
+
+    &-secondary {
+        border-color: $secondary;
+    }
+}
+
+.border-2 {
+    border-width: 3px;
+}
+
+
+
+
+
+
 $gaps: 25, 50, 75, 100, 125, 150, 175, 200, 225, 250, 275, 300;
 
 @each $gap in $gaps {
