--- a/frontend/assets/css/styles.scss
+++ b/frontend/assets/css/styles.scss
@@ -1115,6 +1115,10 @@ h6 {
     text-decoration: underline;
 }
 
+.line-through {
+    text-decoration: line-through;
+}
+
 .border {
     border: 1px solid $grey-4;
 
