--- a/frontend/assets/css/styles.scss
+++ b/frontend/assets/css/styles.scss
@@ -1106,7 +1106,7 @@ h6 {
 
 .input-shadow {
     .q-field__inner {
-        box-shadow: $shadow-1;
+        box-shadow: $shadow-up-2;
         border-radius: $generic-border-radius;
     }
 }
